# abs_flutter

./: .gitignore  .metadata  LICENSE  PrivacyPolicy.md  README.md  SETTINGS.md  TRANSLATION.md  analysis_options.yaml  pubspec.yaml
.github/ISSUE_TEMPLATE/: -bug-report-.md  -feature-request-.md
.github/workflows/: build.yml  language.yml  test-build.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/whatsnew/: whatsnew-de-DE  whatsnew-en-US
api/abs_api/: .openapi-generator-ignore  README.md  pubspec.yaml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  globals.dart  main.dart
lib/l10n/: intl_de.arb  intl_en.arb  intl_fr.arb  intl_hr.arb  intl_it.arb  intl_nb_NO.arb  intl_nl.arb  intl_pt.arb  intl_pt_BR.arb  intl_ru.arb  intl_sl.arb  intl_ta.arb  intl_zh_Hans.arb
lib/models/: chapter.dart  chapter.freezed.dart  chapter.g.dart  file.dart  file.freezed.dart  file.g.dart  history.dart  history.freezed.dart  history.g.dart  library_preview.dart  library_preview.freezed.dart  library_preview.g.dart  library_preview_item.dart  library_preview_item.freezed.dart  library_preview_item.g.dart  library_series_preview.dart  library_sort.dart  (+24 more)
linux/: CMakeLists.txt  io.github.vito0912.abs_flutter.appdata.xml  my_application.cc
md/: CONTRIBUTING.md  RELEASE.md  WindowsStore.md
modules/just_audio_windows/windows/: .gitignore  CMakeLists.txt  just_audio_windows_plugin.cpp  player.hpp  url_code.hpp
snap/: snapcraft.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+752 files in other folders)
